# monolithic-server

./: Cargo.toml
src/: game_state.rs  game_types.rs  logging.rs  main.rs
src/ai/: generalist.rs  mod.rs  shared.rs
src/client/: mod.rs
src/engine/: actions.rs  bots.rs  components.rs  constants.rs  game_objects.rs  intents.rs  mod.rs  player.rs  process_actions.rs  runner.rs  start.rs  turret.rs  unit.rs
src/engine/actions/: create_actions.rs  mod.rs  process_actions.rs  server_actions.rs
src/engine/client/: mod.rs
src/engine/constants/: general.rs  mod.rs  terrain.rs
src/engine/generate/: component.rs  map.rs  mod.rs  structures.rs  terrain.rs  unit.rs
src/simulations/: basic.rs
