[package]
name = "monolithic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socketioxide = { version = "0.14.1", features = ["state"] }
tokio = { version = "1.40.0", features = ["full"] }
hashbrown = "0.15.0"
hexx = "0.18.0"
enum-map = "2.7.3"
ashscript-types="0.3.0"
lazy_static="1.5.0"