[package]
name = "monolithic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socketioxide = { version = "0.14.1", features = ["state"] }
tokio = { version = "1.40.0", features = ["full"] }
hashbrown = "0.15.0"
hexx =  { version = "0.18.0", features = ["serde"] }
enum-map = { version = "2.7.3", features = ["serde"] }
ashscript-types = { git = "https://github.com/Ashscript-Game/ashscript-types", branch = "main" }
lazy_static = "1.5.0"
glam = "0.27.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
libnoise = "1.1.2"
enum-iterator = "2.1.0"
postcard = { version = "1.0.10", features = ['use-std'] }
tokio-tungstenite = "0.24.0"
